add docs, test, examples, runtime checks, fixes